--- a/front/src/layout.css
+++ b/front/src/layout.css
@@ -1,24 +1,32 @@
-.layout{
+.layout {
     display: flex;
     flex-direction: column;
+    position: absolute;
+    width: 100%;
+    min-height: 100vh;
+    height: 100vh;
+    top: 0;
 }
 
-.header{
-    flex: 1;
-    background-color: #394539;
-    height: 50px;
+.layout>div {
 
+    flex: 1
+}
+
+.header {
+    background-color: #394539;
+    flex: 0 45px !important;
     display: flex;
     flex-direction: row;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-.header div{
+.header>div {
     flex: 1;
 }
 
-.logo{
+.logo {
     color: #ffff66;
     font-weight: bold;
     text-shadow: -2px 1px 3px #32863f;
@@ -27,6 +35,11 @@
     margin-block: auto;
 }
 
-.nav.menu{
+.nav.menu {
     flex: 0 !important;
+}
+
+.wrapper {
+    flex-direction: column;
+    display: flex;
 }
