--- a/front/src/views/game/game.css
+++ b/front/src/views/game/game.css
@@ -39,9 +39,9 @@
     flex-direction: row;
 }
 
-.team-home > div,
-.team-visitor > div,
-.center > div{
+.team-home>div,
+.team-visitor>div,
+.center>div {
 
     flex: 1;
 }
@@ -62,8 +62,12 @@
 .game-bar-controls {
     align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-top: 20px;
+}
+
+.game-bar-controls>button {
+    margin: 5px;
 }
 
 .team-visitor-score,
@@ -77,7 +81,7 @@
     text-align: center;
 }
 
-.game-balance{
+.game-balance {
     display: flex;
     flex-direction: row;
     height: 27px;
@@ -86,10 +90,34 @@
     background-color: #017101;
 }
 
-.game-balance canvas{
+.game-balance canvas {
     flex: 1;
 }
 
-#game-ball{
+#game-ball {
     display: none;
+}
+
+.btn-green,
+.btn-green:focus {
+    background: #085b08;
+    color: white;
+}
+
+.btn-green:hover,
+.btn-green:active {
+    background: white !important;
+    color: #085b08 !important;
+}
+
+.btn-yellow,
+.btn-yellow:focus {
+    background-color: #b2a21c;
+    color: black;
+}
+
+.btn-yellow:hover,
+.btn-yellow:active {
+    background-color: black !important;
+    color: #b2a21c !important;
 }
