--- a/front/src/views/game/game.css
+++ b/front/src/views/game/game.css
@@ -121,3 +121,31 @@
     background-color: black !important;
     color: #b2a21c !important;
 }
+
+#game-message {
+    position: fixed;
+    width: 200px;
+    height: 25px;
+    left: calc(50% - 100px);
+    text-align: center;
+    display: none;  
+    background-color: white;
+}
+
+#game-message span.penalty {
+    color: green;
+    text-shadow: 1px 2px 2px #9a9191e6;
+}
+
+#game-message span.goal {
+    animation: blinker 2s linear infinite;
+    font-weight: bold;
+    color: green;
+    text-shadow: 1px 2px 2px #9a9191e6;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
